--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,3 +1,11 @@
-11.06.2014
+10.06.2014
 1. Add left and right move borders
 2. Add placement on other blocks
+
+11.06.2014
+	From 10.06.2014
+	Done 1.
+	Done 2.
+3. Add more figures
+4. Add figure turning functionality
+5. Add line clearing and add scores
