--- a/ToDo.txt
+++ b/ToDo.txt
@@ -9,3 +9,10 @@
 3. Add more figures
 4. Add figure turning functionality
 5. Add line clearing and add scores
+
+13.06.2014
+	From 11.06.2014
+	Done 3.
+	Done 4.
+	Done 5.
+6. Fix line clearing bug/
